@@ -115,3 +115,10 @@ Feature: Multi Elements
      And the text for the first item in unordered list 1 should be "Item One"
      And the text for the first item in unordered list 2 should be "Item Four"
      And the text for the first item in unordered list 3 should be "Item Five"
+
+   Scenario: Selecting ordered lists
+     When I select the ordered lists with class "ol"
+     Then I should have 3 ordered lists
+     And the text for the first item in ordered list 1 should be "Number One"
+     And the text for the first item in ordered list 2 should be "Number Two"
+     And the text for the first item in ordered list 3 should be "Number Three"
